feat: complete backlog P0-P2 + Telegram command bot
P0:
- P0-1: wire signal service output into hb_bridge (_consume_signals)
- P0-2: HARD_STOP publishes kill-switch intent (_check_hard_stop_transitions)

P1:
- P1-1: sign-aware funding rate in spread floor cost model
- P1-2: fill-edge EWMA tracker with auto-widen (adverse_fill_spread_multiplier)
- P1-3: EOD position close at daily rollover (close_position_at_rollover)
- P1-4: OHLCV candles for regime EMA/ATR with price_buffer fallback
- P1-6: neutral_high_vol regime (band_pct 50-100% of high_vol threshold)
- P1-7: daily paper-state backup script (artifact_retention.py)
- P1-8: risk_service audit -- add ShutdownHandler, latest.json, audit stream
- P1-9: comment out ClickHouse services in compose (no server available)

P2:
- P2-1: add 38 tests for price_buffer and hb_bridge signal routing
- P2-2: synthetic alert validation script (synthetic_alert_test.py)
- P2-3: replace Slack with Telegram in alertmanager + env template
- P2-4: update data flow architecture doc with P0-1/P0-2 bridge routing

Extras:
- Telegram command bot service (/status /pnl /position /fills /risk /help)
- Remove redundant .env.example, consolidate to env/.env.template
- Update project-context rule to reference correct env template path

Made-with: Cursor

--- a/hbot/.gitignore
+++ b/hbot/.gitignore
@@ -7,7 +7,6 @@ env/.env
 env/.env.*
 !env/.env.template
 .env
-!.env.example
 *.pem
 *.key
 *.crt
@@ -93,6 +92,7 @@ monitoring/prometheus/data/
 backups/*.tar.gz
 backups/*.zip
 backups/*.sql
+data/bot1/archive/
 
 # ---- Docker local override ----
 docker-compose.override.yml
