--- a/hbot/env/.env.template
+++ b/hbot/env/.env.template
@@ -73,9 +73,13 @@ GF_SERVER_SERVE_FROM_SUB_PATH=false
 PROMETHEUS_RETENTION=30d
 PROMETHEUS_RETENTION_SIZE=5GB
 
-# ---- Alertmanager (optional) ----
-ALERTMANAGER_SLACK_WEBHOOK=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
-ALERTMANAGER_SLACK_CHANNEL=#trading-alerts
+# ---- Alertmanager — Telegram (optional) ----
+# 1. Message @BotFather on Telegram → /newbot → copy the token.
+# 2. Add the bot to a group or DM it, then visit
+#    https://api.telegram.org/bot<TOKEN>/getUpdates to find the chat_id.
+# 3. Uncomment telegram_configs in monitoring/alertmanager/alertmanager.yml.
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
 
 # ---- LLM Sentiment (PMM+RSI+Hedge strategy) ----
 # Grok (xAI) — primary provider
