--- a/hbot/monitoring/alertmanager/alertmanager.yml
+++ b/hbot/monitoring/alertmanager/alertmanager.yml
@@ -28,14 +28,20 @@ receivers:
     webhook_configs:
       - url: "http://alert-webhook-sink:19093/alert"
         send_resolved: true
-    # slack_configs are intentionally disabled when SLACK_WEBHOOK_URL is not set.
-    # Alertmanager rejects api_url: "" (empty env var) with "unsupported scheme".
-    # To enable Slack alerts: set SLACK_WEBHOOK_URL in .env and uncomment below.
-    # slack_configs:
-    #   - api_url: "${SLACK_WEBHOOK_URL}"
-    #     channel: "${SLACK_ALERT_CHANNEL:-#trading-alerts}"
-    #     title: "{{ .GroupLabels.alertname }} [{{ .GroupLabels.severity }}]"
-    #     text: "{{ range .Alerts }}{{ .Annotations.description }}\n{{ end }}"
+    # Telegram alerts — set TELEGRAM_BOT_TOKEN and TELEGRAM_CHAT_ID in .env.
+    # To get these:
+    #   1. Message @BotFather on Telegram → /newbot → copy the token.
+    #   2. Add your bot to a group (or DM it), then visit
+    #      https://api.telegram.org/bot<TOKEN>/getUpdates to find the chat_id.
+    # Uncomment below once both env vars are set.
+    # telegram_configs:
+    #   - bot_token: "${TELEGRAM_BOT_TOKEN}"
+    #     chat_id: ${TELEGRAM_CHAT_ID}
+    #     parse_mode: "HTML"
+    #     message: |
+    #       <b>{{ .GroupLabels.alertname }}</b> [{{ .GroupLabels.severity }}]
+    #       {{ range .Alerts }}{{ .Annotations.description }}
+    #       {{ end }}
     #     send_resolved: true
 
 inhibit_rules:
